# shroombrella

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README  README.md  build.rs  shroombrella.rc
src/: app.rs  crypto.rs  main.rs  settings.rs  storage.rs  theme.rs  vault.rs
src/ui/: mod.rs  password_manager_ui.rs  settings_ui.rs  theme_creator_ui.rs  vault_creator_ui.rs
