[package]
name = "shroombrella"
version = "0.1.2"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base64 = "0.22.1"
dirs = "6.0.0"
eframe = "0.32.0"
image = "0.25.6"
rand = "0.9.2"
rfd = "0.15.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
zeroize = "1.8.1"

[profile.release]
opt-level = 2
codegen-units = 1
lto = true
panic = "abort"

[[bin]]
name = "shroombrella"
path = "src/main.rs"
windows-subsystem = "windows"
